# AIthon

./: .gitignore  CMakeLists.txt  CMakeLists_2.txt  CMakeLists_old.txt  CoreSystemsImplemented.md  FEATURE_CATALOG.md  LICENSE  PHASE1_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.sh  main  main.cpp
CMake/: CMakeLists.txt
Documentations/: ASYNC_TO_ACTOR_TRANSFORMATION.md  COMPILER_REQUIREMENTS.md  CORE_SYSTEM_IMPLEMENTATION.md  FEATURE_CATALOG.md  KEY_PROBLEMS_PYTHON.md  PARSER.md  PHASE_1_IMPLEMENTATION.md  PHASE_2_IMPLEMENTATION.md  PHASE_3_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  STRUCTURE.md
examples/: classes_demo.py  fibonacci.py  function_callback.py  generators_demo.py  green_threads_demo.py  import_demo.py  lists_dictionaries.mit  main.ait  main.py  main_invalid.ait  main_old.aithon  ping_pong.py
include/analyzer/: semantic_analyzer.h
include/ast/: ast_nodes.h  python_ast_converter.h
include/codegen/: async_to_actor.h  async_tranformer.h  async_transformer.h  llvm_codegen.h
include/compiler/: compiler.h
include/lexer/: lexer.h  token.h
include/parser/: ast.h  parser.h
include/runtime/: actor.h  actor_gc.h  actor_process.h  exceptions.h  green_threads.h  heap.h  lockfree_queue.h  message.h  pyobject.h  scheduler.h  supervisor.h
include/utils/: error_reporter.h
include/validator/: project_validator.h  syntax_validator.h
main.dSYM/Contents/Resources/DWARF/: main
runtime_lib/: runtime.cpp
src/: main.cpp
src/analyzer/: semantic_analyzer.cpp
src/ast/: ast_nodes.cpp  python_ast_converter.cpp
src/codegen/: async_to_actor.cpp  async_tranformer.cpp  async_transformer.cpp  llvm_codegen.cpp
src/compiler/: compiler.cpp  compiler_old.cpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: ast.cpp  parser.cpp
src/runtime/: actor_gc.cpp  actor_process.cpp  exceptions.cpp  green_threads.cpp  heap.cpp  pyobject.cpp  runtime.cpp  scheduler.cpp
src/utils/: error_reporter.cpp
src/validator/: project_validator.cpp  syntax_validator.cpp
tests/: CMakeLists.txt  test_actors.cpp  test_pyobject.cpp  test_scheduler.cpp  test_validator.cpp
